<resources>
    <string name="app_name">Chatter Chat</string>
    <string name="welcome">Welcome</string>
    <string name="start_chatting_now">Start chatting now</string>
    <string name="chatter_chat">Chatter Chat</string>
    <string name="chat_with_anyone_securely">Chat with Anyone Securely</string>
    <string name="username">Email-ID</string>
    <string name="enter_password">Enter Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="don_t_you_have_an_account_create">Don\'t you have an account? <font color="#0000FF">Create</font></string>
    <string name="sign_in">Sign in</string>
    <string name="full_name">Full Name</string>
    <string name="update_profile">Update Profile</string>
    <string name="email_id">Email Id</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_account">Already Have An Account</string>

</resources>