<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageViewCircle"
        android:layout_width="235dp"
        android:layout_height="235dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="1dp"
        android:background="@drawable/ic_create_account_background_top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editTextUserNameSignup"
        android:layout_width="325dp"
        android:layout_height="55dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/montserrat_semibold"
        android:hint="@string/full_name"
        android:paddingStart="60dp"
        android:paddingEnd="60dp"
        android:textColor="@color/colorText"
        android:textSize="15sp"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/imageViewCircle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/bg_txt_username"
        tools:layout_editor_absoluteY="293dp" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editTextEmailSignup"
        android:layout_width="325dp"
        android:layout_height="55dp"
        app:layout_constraintTop_toBottomOf="@id/editTextUserNameSignup"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/montserrat_semibold"
        android:hint="@string/email_id"
        android:paddingStart="60dp"
        android:paddingEnd="60dp"
        android:textColor="@color/colorText"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/bg_txt_email"
        tools:layout_editor_absoluteY="348dp" />



    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editTextPasswordSignup"
        app:layout_constraintTop_toBottomOf="@id/editTextEmailSignup"
        android:layout_width="325dp"
        android:layout_height="55dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/montserrat_semibold"
        android:hint="@string/enter_password"
        android:paddingStart="60dp"
        android:paddingEnd="60dp"
        android:textColor="@color/colorText"
        android:textSize="15sp"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/bg_txt_password"
        tools:layout_editor_absoluteY="403dp" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editTextConfirmPasswordSignup"
        android:layout_width="325dp"
        app:layout_constraintTop_toBottomOf="@id/editTextPasswordSignup"
        android:layout_height="55dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/montserrat_semibold"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:paddingStart="60dp"
        android:paddingEnd="60dp"
        android:textColor="@color/colorText"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/bg_txt_password"
        tools:layout_editor_absoluteY="458dp" />

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/rounded_corner"
        android:fontFamily="@font/montserrat_semibold"
        android:text="@string/sign_up"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:cornerRadius="18dp"
        app:layout_constraintBottom_toTopOf="@+id/alredyAccountSignUpView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextConfirmPasswordSignup" />

    <TextView
        android:id="@+id/alredyAccountSignUpView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:text="@string/already_account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>